--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <img src=assets/images/bt8-expand-dark.png height=40 class="logo-dark d-none" alt=IT小站></a>
 <a href class=logo-collapsed><img src=assets/images/bt.png height=40 class=logo-light alt=IT小站>
 <img src=assets/images/bt.png height=40 class="logo-dark d-none" alt=IT小站></a></div></div><div class="sidebar-menu flex-fill"><div class=sidebar-scroll><div class=sidebar-menu-inner><ul><li class=sidebar-item><a href=#6954a5b29b26296d8ac7cdeec808d8fb class="smooth change-href" data-change=#6954a5b29b26296d8ac7cdeec808d8fb><i class="fas fa-flask fa-lg icon-fw icon-lg mr-2"></i>
+<span>常用推荐</span></a></li><li class=sidebar-item><a href=#e3d9565347251bd0dadb7fea78786b73 class="smooth change-href" data-change=#e3d9565347251bd0dadb7fea78786b73><i class="fa fa-book icon-fw icon-lg mr-2"></i>
 <span>学习放松</span>
 <i class="iconfont icon-arrow-r-m sidebar-more text-sm"></i></a><ul><li><a href=#6954a5b29b26296d8ac7cdeec808d8fb class=smooth><span>摸起来</span></a></li><li><a href=#c3795b1bdeea627d7c8f5afbb6e850e3 class=smooth><span>开发平台</span></a></li></ul></li><li class=sidebar-item><a href=#b038b5b14276b5d317fafacaaae5c769 class=smooth><i class="fas fa-film fa-lg fa-lg icon-fw icon-lg mr-2"></i>
 <span>悠闲娱乐</span></a></li><li class=sidebar-item><a href=#e3d9565347251bd0dadb7fea78786b73 class="smooth change-href" data-change=#e3d9565347251bd0dadb7fea78786b73><i class="fa fa-book icon-fw icon-lg mr-2"></i>
