--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <img src=assets/images/logo.svg height=40 class="logo-dark d-none" alt=磨坊蜘蛛>
 <span class=logo-title>磨坊蜘蛛</span></a>
 <a href class=logo-collapsed><img src=assets/images/logo.svg height=40 class=logo-light alt=磨坊蜘蛛>
-<img src=assets/images/logo.svg height=40 class="logo-dark d-none" alt=磨坊蜘蛛></a></div></div><div class="sidebar-menu flex-fill"><div class=sidebar-scroll><div class=sidebar-menu-inner><ul><li class=sidebar-item><a href=#366a7288b80ec8882b88467447296837 class=smooth><i class="fa fa-users fa-lg icon-fw icon-lg mr-2"></i>
-<span>常用推荐</span></a></li><li class=sidebar-item><a href=#3fa627d8618d651a762377a8f4f853b8 class=smooth><i class="fas fa-film fa-lg fa-lg icon-fw icon-lg mr-2"></i>
+<img src=assets/images/logo.svg height=40 class="logo-dark d-none" alt=磨坊蜘蛛></a></div></div><div class="sidebar-menu flex-fill"><div class=sidebar-scroll><div class=sidebar-menu-inner><ul><li class=sidebar-item><a href=#366a7288b80ec8882b88467447296837 class=smooth><i class="fas fa-film fa-lg fa-lg icon-fw icon-lg mr-2"></i>
+<span>常用推荐</span></a></li><li class=sidebar-item><a href=#3fa627d8618d651a762377a8f4f853b8 class=smooth><i class="fa fa-users fa-lg icon-fw icon-lg mr-2"></i>
 <span>团队协作</span></a></li><li class=sidebar-item><a href=#e1ba0c6c79b4d27edb25e6b59062df57 class="smooth change-href" data-change=#e1ba0c6c79b4d27edb25e6b59062df57><i class="fas fa-film fa-lg icon-fw icon-lg mr-2"></i>
 <span>产品运营</span>
 <i class="iconfont icon-arrow-r-m sidebar-more text-sm"></i></a><ul><li><a href=#e1ba0c6c79b4d27edb25e6b59062df57 class=smooth><span>社区交流</span></a></li><li><a href=#2579c092eaedc28f4e7fbe40e35298be class=smooth><span>行业指数</span></a></li></ul></li><li class=sidebar-item><a href=#fa74202ec937ecf43d1fbc779c044896 class="smooth change-href" data-change=#fa74202ec937ecf43d1fbc779c044896><i class="fas fa-flask fa-lg icon-fw icon-lg mr-2"></i>
