deploy: ppapi-cn/coco@4df30a1944675a159445c98f8636332ab2b11e15

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <span>产品运营</span>
 <i class="iconfont icon-arrow-r-m sidebar-more text-sm"></i></a><ul><li><a href=#e1ba0c6c79b4d27edb25e6b59062df57 class=smooth><span>社区交流</span></a></li><li><a href=#2579c092eaedc28f4e7fbe40e35298be class=smooth><span>行业指数</span></a></li></ul></li><li class=sidebar-item><a href=#fa74202ec937ecf43d1fbc779c044896 class="smooth change-href" data-change=#fa74202ec937ecf43d1fbc779c044896><i class="fas fa-flask fa-lg icon-fw icon-lg mr-2"></i>
 <span>技术开发</span>
-<i class="iconfont icon-arrow-r-m sidebar-more text-sm"></i></a><ul><li><a href=#fa74202ec937ecf43d1fbc779c044896 class=smooth><span>学习社区</span></a></li><li><a href=#acd617ea241c9daf2f251963bc03c6e3 class=smooth><span>云服务器</span></a></li></ul></li><li class=sidebar-item><a href=#eaa418dfe4b609507342083173ce220e class=smooth><i class="fas fa-film fa-lg fa-lg icon-fw icon-lg mr-2"></i>
+<i class="iconfont icon-arrow-r-m sidebar-more text-sm"></i></a><ul><li><a href=#fa74202ec937ecf43d1fbc779c044896 class=smooth><span>学习社区</span></a></li><li><a href=#acd617ea241c9daf2f251963bc03c6e3 class=smooth><span>云服务器</span></a></li></ul></li><li class=sidebar-item><a href=#eaa418dfe4b609507342083173ce220e class=smooth><i class="fa fa-magic fa-lg icon-fw icon-lg mr-2"></i>
 <span>UI设计</span></a></li><li class=sidebar-item><a href=#3e90c5117dc0fe9d71410e448d766e52 class=smooth><i class="fa fa-wrench fa-lg icon-fw icon-lg mr-2"></i>
 <span>常用工具</span></a></li><li class=sidebar-item><a href=#126b7ec88a9a9e2f691c57d02ac85225 class="smooth change-href" data-change=#126b7ec88a9a9e2f691c57d02ac85225><i class="fa fa-book icon-fw icon-lg mr-2"></i>
 <span>书籍推荐</span>
